fj/src/test/resources/tests/inh-overriding3.fj
class A extends Object {
  A() {
    super();
  }
  A mk(X x) {
    return new A();
  }
}
class B extends A {
  B() {
    super();
  }
  A mk(Y y) {
    return new B();
  }
}
class X extends Object {
  X() {
    super();
  }
}
class Y extends X {
  Y() {
    super();
  }
}
new B().mk(new Y())
